--- a/roles/devsetup/templates/zshenv.j2
+++ b/roles/devsetup/templates/zshenv.j2
@@ -2,3 +2,4 @@ if [ -f .cargo/env ]; then
     . "$HOME/.cargo/env"
 fi
 export PATH="$HOME/.local/bin:$PATH"
+export SSH_AUTH_SOCK=~/.ssh/ssh_auth_sock
