--- a/roles/devsetup/templates/zshrc.j2
+++ b/roles/devsetup/templates/zshrc.j2
@@ -26,3 +26,6 @@ if [ ! -S ~/.ssh/ssh_auth_sock ]; then
   ln -sf "$SSH_AUTH_SOCK" ~/.ssh/ssh_auth_sock
   export SSH_AUTH_SOCK=~/.ssh/ssh_auth_sock
 fi
+
+# Setup GPG TTY
+export GPG_TTY=$(tty)
