add local bin to fish path

--- a/roles/devsetup/templates/config.fish.j2
+++ b/roles/devsetup/templates/config.fish.j2
@@ -1,3 +1,5 @@
+fish_add_path ~/.local/bin
+
 if status is-interactive
     # Commands to run in interactive sessions can go here
     starship init fish | source
