--- a/roles/devsetup/templates/config.fish.j2
+++ b/roles/devsetup/templates/config.fish.j2
@@ -1,4 +1,5 @@
 fish_add_path ~/.local/bin
+fish_add_path ~/.cargo/bin
 
 if status is-interactive
     # Commands to run in interactive sessions can go here
