ensure kairos owns files in its user dir
This works around https://github.com/kairos-io/kairos/issues/2797

--- a/plays/kairos/templates/config.yml.j2
+++ b/plays/kairos/templates/config.yml.j2
@@ -193,3 +193,7 @@ stages:
             Gateway={{ network.gateway }}
 {% endif %}
 {% endfor %}
+  fs:
+    - name: Ensure kairos owns files in its user directory
+      commands:
+        - chown -R kairos:kairos ~kairos
