--- a/roles/vyos-interfaces/templates/pppoe_config.yml.j2
+++ b/roles/vyos-interfaces/templates/pppoe_config.yml.j2
@@ -2,7 +2,7 @@
 {% for pppoe in vyos_interfaces__pppoe %}
 - set interfaces pppoe {{ pppoe.name }} authentication password '{{ pppoe.authentication.password }}'
 - set interfaces pppoe {{ pppoe.name }} authentication user '{{ pppoe.authentication.user }}'
-- set interfaces pppoe {{ pppoe.name }} mru '{{ pppoe.mss }}'
+- set interfaces pppoe {{ pppoe.name }} ip adjust-mss '{{ pppoe.mss }}'
 - set interfaces pppoe {{ pppoe.name }} mtu '{{ pppoe.mtu }}'
 - set interfaces pppoe {{ pppoe.name }} no-default-route
 - set interfaces pppoe {{ pppoe.name }} no-peer-dns
