--- a/plays/kairos/templates/k3s.service.j2
+++ b/plays/kairos/templates/k3s.service.j2
@@ -12,7 +12,7 @@ ExecStart=/usr/bin/k3s server \
 {% endif %}
     --cluster-cidr=172.16.0.0/16 \
     --service-cidr=172.17.0.0/16 \
-    --disable=traefik,servicelb \
+    --disable=metrics-server,traefik,servicelb \
     --disable-helm-controller \
 {% for tls_san in k3s_controlplane_san %}
     --tls-san={{ tls_san }} \
