feat: Update dns codegen
This updates DNS codegen to be more like the newly added
postgres-operator's logical backup codegen.

--- a/plays/dns/templates/kustomization.yml.j2
+++ b/plays/dns/templates/kustomization.yml.j2
@@ -1,5 +1,5 @@
-{{ ansible_managed | comment }}
-{{ (root_relative_dir + "/" + template_path) | comment }}
+# @codegen-command: ansible-playbook {{ play_name }} 
+# @generated
 ---
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
