--- a/plays/codegen/templates/resources/application.yml.j2
+++ b/plays/codegen/templates/resources/application.yml.j2
@@ -6,10 +6,15 @@ kind: Application
 metadata:
   name: {{ application }}
 spec:
-  project: default
   destination:
     server: https://kubernetes.default.svc
     namespace: {{ application }}
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jsonPointers:
+        - /spec/preserveUnknownFields
+  project: default
   source:
     path: kustomization/overlays/prod/{{ application }}
     repoURL: https://github.com/sdwilsh/ansible-playbooks
